src_old/objects/Service__c.object
<CustomObject>
    <description>Service contains the definition of a service. Service is related to Service Attribute, Service Exception, Service Question, Service Question Defined Response, Retailer Service, Retailer Service Equipment, and Project Service.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account specific service</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllowDistribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when adding Distribution Check service, set flag so that distribution repository is checked at each Location.</description>
        <inlineHelpText>Checking Allow Distribution will add the attributes to the service level for the user to specify using Distribution  check.</inlineHelpText>
        <label>Allow Product Filtering by Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowedTargetUse__c</fullName>
        <label>Allowed Target Use</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Analytics Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>Total duration of the scheduled service event.</inlineHelpText>
        <label>Duration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionPrompt__c</fullName>
        <defaultValue>&quot;Were you able to do the work?&quot;</defaultValue>
        <description>Text for the prompt asking about the execution status of the service.</description>
        <inlineHelpText>Text for the prompt asking about the execution status of the service.</inlineHelpText>
        <label>Exception Prompt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsExcludedForSuccessRate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The indicator to the system if this service is excluded for the success rate calculation</description>
        <inlineHelpText>The indicator to the system if this service is excluded for the success rate calculation</inlineHelpText>
        <label>Do Not Include in Success Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNumberOfWorkersRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It can be used when there is team service on a project</description>
        <inlineHelpText>Enter number of workers required for this team service</inlineHelpText>
        <label>Allow Multiple Workers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSingleService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Single Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobManualTemplate__c</fullName>
        <label>JobManualTemplate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Manual</fullName>
                    <default>true</default>
                    <label>No Manual</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LimitQuestionstoFamily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit Questions to Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this service template will not have any survey Questions.</description>
        <label>No Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceDescription__c</fullName>
        <label>Service Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Family</label>
        <referenceTo>ServiceFamily__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Bulk Scan</fullName>
                </value>
                <value>
                    <fullName>MGR - Signoff</fullName>
                </value>
                <value>
                    <fullName>Shift</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyTemplateVersion__c</fullName>
        <label>Survey Template Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V1</fullName>
                    <default>true</default>
                    <label>V1</label>
                </value>
                <value>
                    <fullName>V2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TargetType__c</fullName>
        <label>Target Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isBillable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBulkscan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses Bulk Scan Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSelfDirected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uses Self-Directed Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVisibleToClient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Service Visible to Supplier</description>
        <inlineHelpText>The field indicates if the service is visible to the supplier</inlineHelpText>
        <label>Is Visible to Client</label>
        <type>Checkbox</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SurveyTemplateVersion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>